// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`solve Objekt > 
    "{
      a: \\"a\\",
      b: \\"b\\",
      c: \\"c\\"
    }"
   1`] = `
"{
  a: \\"a\\",
  b: \\"b\\",
  c: \\"c\\"
}"
`;

exports[`solve Objekt -- deepWalk > 
    "{
      a: \\"a\\",
      b: \\"b\\",
      c: \\"c\\",
      abc: {
        a: \\"a\\",
        b: \\"b\\",
        c: \\"c\\"
      }
    }"
   1`] = `
"{
  a: \\"a\\",
  b: \\"b\\",
  c: \\"c\\",
  abc: {
    a: \\"a\\",
    b: \\"b\\",
    c: \\"c\\"
  }
}"
`;

exports[`solve Objekt -- deepWalk: 
    "{
      a: "a",
      b: "b",
      c: "c",
      abc: {
        a: "a",
        b: "b",
        c: "c"
      }
    }"
   1`] = `
"{
  a: "a",
  b: "b",
  c: "c",
  abc: {
    a: "a",
    b: "b",
    c: "c"
  }
}"
`;

exports[`solve Objekt -- occur twice > 
    "{
      a: \\"c\\",
      b: \\"c\\"
    }"
   1`] = `
"{
  a: \\"c\\",
  b: \\"c\\"
}"
`;

exports[`solve Objekt -- occur twice: 
    "{
      a: "c",
      b: "c"
    }"
   1`] = `
"{
  a: "c",
  b: "c"
}"
`;

exports[`solve Objekt: 
    "{
      a: "a",
      b: "b",
      c: "c"
    }"
   1`] = `
"{
  a: "a",
  b: "b",
  c: "c"
}"
`;

exports[`solve Objekt 1`] = `
"{
  a: "a",
  b: "b",
  c: "c"
}"
`;

exports[`solve Objekt -- occur twice 1`] = `
"{
  a: "c",
  b: "c"
}"
`;

exports[`solve Objekt -- deepWalk 1`] = `
"{
  a: "a",
  b: "b",
  c: "c",
  abc: {
    a: "a",
    b: "b",
    c: "c"
  }
}"
`;
